--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#34006a">
-    <title>Budget App - JavaScript</title>
+    <title>Budget App</title>
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="/icon/logo192.png"
 </head>
 <body>
     <div class="budget-container">
@@ -73,6 +74,5 @@
 
     <script src="js/chart.js"></script>
     <script src="js/budget.js"></script>
-    <script src="js/script.js"></script>
 </body>
 </html>
