--- a/index.html
+++ b/index.html
@@ -74,5 +74,7 @@
 
     <script src="js/chart.js"></script>
     <script src="js/budget.js"></script>
+    <script src="index.js"></script>
+
 </body>
 </html>
