--- a/index.html
+++ b/index.html
@@ -74,7 +74,17 @@
 
     <script src="js/chart.js"></script>
     <script src="js/budget.js"></script>
-    <script src="index.js"></script>
+    <script>
+        if ('serviceWorker' in navigator) {
+          window.addEventListener('load', ()=> {
+            navigator
+            .serviceWorker
+            .register('sw.js')
+            .then(()=>console.log("Ready."))
+            .catch(()=>console.log("Err..."));
+          });
+        }
+      </script>
 
 </body>
 </html>
