--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           window.addEventListener('load', ()=> {
             navigator
             .serviceWorker
-            .register('/budget-app/sw.js')
+            .register('sw.js')
             .then(()=>console.log("Ready."))
             .catch(()=>console.log("Err..."));
           });
