--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#34006a">
     <title>Budget App</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="manifest.json">
     <link rel="apple-touch-icon" href="/icon/logo192.png"
 </head>
 <body>
