--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <script src="js/chart.js"></script>
     <script src="js/budget.js"></script>
-    <script>
+<!--     <script>
         if ('serviceWorker' in navigator) {
           window.addEventListener('load', ()=> {
             navigator
@@ -84,7 +84,7 @@
             .catch(()=>console.log("Err..."));
           });
         }
-      </script>
+      </script> -->
 
 </body>
 </html>
