--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Budget App</title>
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="/manifest.json">
-    <link rel="apple-touch-icon" href="icon/logo192.png"
+    <link rel="apple-touch-icon" href="icon/logo192.png">
 </head>
 <body>
     <div class="budget-container">
