--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
 
     <script src="js/chart.js"></script>
     <script src="js/budget.js"></script>
-<!--     <script>
+    <script>
         if ('serviceWorker' in navigator) {
           window.addEventListener('load', ()=> {
             navigator
             .serviceWorker
-            .register('sw.js')
+            .register('budget-app/sw.js')
             .then(()=>console.log("Ready."))
             .catch(()=>console.log("Err..."));
           });
         }
-      </script> -->
+      </script>
 
 </body>
 </html>
