--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#34006a">
     <title>Budget App</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="manifest" href="./manifest.json">
     <link rel="apple-touch-icon" href="icon/logo192.png">
 </head>
 <body>
@@ -79,7 +79,7 @@
           window.addEventListener('load', ()=> {
             navigator
             .serviceWorker
-            .register('budget-app/sw.js')
+            .register('./sw.js')
             .then(()=>console.log("Ready."))
             .catch(()=>console.log("Err..."));
           });
